build/ers
In file included from /usr/include/c++/6/string:52:0,
                 from /usr/include/c++/6/bits/locale_classes.h:40,
                 from /usr/include/c++/6/bits/ios_base.h:41,
                 from /usr/include/c++/6/ios:42,
                 from /usr/include/c++/6/ostream:38,
                 from /usr/include/c++/6/iostream:39,
                 from broken.cpp:6:
/usr/include/c++/6/bits/basic_string.h: In instantiation of ‘class std::basic_string<char, std::char_traits<char>, my_allocator<char> >’:
broken.cpp:49:25:   required from here
/usr/include/c++/6/bits/basic_string.h:2616:63: error: no class template named ‘rebind’ in ‘class my_allocator<char>’
       typedef typename _Alloc::template rebind<_CharT>::other _CharT_alloc_type;
                                                               ^~~~~~~~~~~~~~~~~
/usr/include/c++/6/bits/basic_string.h:2629:68: error: no class template named ‘rebind’ in ‘class my_allocator<char>’
       typedef __gnu_cxx::__normal_iterator<pointer, basic_string>  iterator;
                                                                    ^~~~~~~~
/usr/include/c++/6/bits/basic_string.h:2631:61: error: no class template named ‘rebind’ in ‘class my_allocator<char>’
                                                             const_iterator;
                                                             ^~~~~~~~~~~~~~
/usr/include/c++/6/bits/basic_string.h:2632:53: error: no class template named ‘rebind’ in ‘class my_allocator<char>’
       typedef std::reverse_iterator<const_iterator> const_reverse_iterator;
                                                     ^~~~~~~~~~~~~~~~~~~~~~
/usr/include/c++/6/bits/basic_string.h:2633:52: error: no class template named ‘rebind’ in ‘class my_allocator<char>’
       typedef std::reverse_iterator<iterator>      reverse_iterator;
                                                    ^~~~~~~~~~~~~~~~
/usr/include/c++/6/bits/basic_string.h: In instantiation of ‘struct std::basic_string<char, std::char_traits<char>, my_allocator<char> >::_Rep’:
/usr/include/c++/6/bits/basic_string.h:3077:19:   required from ‘std::basic_string<_CharT, _Traits, _Alloc>::~basic_string() [with _CharT = char; _Traits = std::char_traits<char>; _Alloc = my_allocator<char>]’
broken.cpp:49:25:   required from here
/usr/include/c++/6/bits/basic_string.h:2660:56: error: no class template named ‘rebind’ in ‘class my_allocator<char>’
  typedef typename _Alloc::template rebind<char>::other _Raw_bytes_alloc;
                                                        ^~~~~~~~~~~~~~~~
/usr/include/c++/6/bits/basic_string.h: In instantiation of ‘std::basic_ostream<_CharT, _Traits>& std::operator<<(std::basic_ostream<_CharT, _Traits>&, const std::basic_string<_CharT, _Traits, _Alloc>&) [with _CharT = char; _Traits = std::char_traits<char>; _Alloc = my_allocator<char>]’:
broken.cpp:51:15:   required from here
/usr/include/c++/6/bits/basic_string.h:5345:57: error: ‘const class std::basic_string<char, std::char_traits<char>, my_allocator<char> >’ has no member named ‘size’
       return __ostream_insert(__os, __str.data(), __str.size());
                                                   ~~~~~~^~~~
/usr/include/c++/6/bits/basic_string.h: In instantiation of ‘std::basic_string<_CharT, _Traits, _Alloc>& std::basic_string<_CharT, _Traits, _Alloc>::assign(const _CharT*) [with _CharT = char; _Traits = std::char_traits<char>; _Alloc = my_allocator<char>]’:
/usr/include/c++/6/bits/basic_string.h:3093:32:   required from ‘std::basic_string<_CharT, _Traits, _Alloc>& std::basic_string<_CharT, _Traits, _Alloc>::operator=(const _CharT*) [with _CharT = char; _Traits = std::char_traits<char>; _Alloc = my_allocator<char>]’
broken.cpp:50:8:   required from here
/usr/include/c++/6/bits/basic_string.h:3693:51: error: no matching function for call to ‘std::basic_string<char, std::char_traits<char>, my_allocator<char> >::assign(const char*&, std::size_t)’
  return this->assign(__s, traits_type::length(__s));
                                                   ^
In file included from /usr/include/c++/6/string:53:0,
                 from /usr/include/c++/6/bits/locale_classes.h:40,
                 from /usr/include/c++/6/bits/ios_base.h:41,
                 from /usr/include/c++/6/ios:42,
                 from /usr/include/c++/6/ostream:38,
                 from /usr/include/c++/6/iostream:39,
                 from broken.cpp:6:
/usr/include/c++/6/bits/basic_string.tcc:682:5: note: candidate: std::basic_string<_CharT, _Traits, _Alloc>& std::basic_string<_CharT, _Traits, _Alloc>::assign(const std::basic_string<_CharT, _Traits, _Alloc>&) [with _CharT = char; _Traits = std::char_traits<char>; _Alloc = my_allocator<char>]
     basic_string<_CharT, _Traits, _Alloc>::
     ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/usr/include/c++/6/bits/basic_string.tcc:682:5: note:   candidate expects 1 argument, 2 provided
In file included from /usr/include/c++/6/string:52:0,
                 from /usr/include/c++/6/bits/locale_classes.h:40,
                 from /usr/include/c++/6/bits/ios_base.h:41,
                 from /usr/include/c++/6/ios:42,
                 from /usr/include/c++/6/ostream:38,
                 from /usr/include/c++/6/iostream:39,
                 from broken.cpp:6:
/usr/include/c++/6/bits/basic_string.h:3641:7: note: candidate: std::basic_string<_CharT, _Traits, _Alloc>& std::basic_string<_CharT, _Traits, _Alloc>::assign(std::basic_string<_CharT, _Traits, _Alloc>&&) [with _CharT = char; _Traits = std::char_traits<char>; _Alloc = my_allocator<char>]
       assign(basic_string&& __str)
       ^~~~~~
/usr/include/c++/6/bits/basic_string.h:3641:7: note:   candidate expects 1 argument, 2 provided
/usr/include/c++/6/bits/basic_string.h:3690:7: note: candidate: std::basic_string<_CharT, _Traits, _Alloc>& std::basic_string<_CharT, _Traits, _Alloc>::assign(const _CharT*) [with _CharT = char; _Traits = std::char_traits<char>; _Alloc = my_allocator<char>]
       assign(const _CharT* __s)
       ^~~~~~
/usr/include/c++/6/bits/basic_string.h:3690:7: note:   candidate expects 1 argument, 2 provided
/usr/include/c++/6/bits/basic_string.h:3719:9: note: candidate: template<class _InputIterator> std::basic_string<_CharT, _Traits, _Alloc>& std::basic_string<_CharT, _Traits, _Alloc>::assign(_InputIterator, _InputIterator) [with _InputIterator = _InputIterator; _CharT = char; _Traits = std::char_traits<char>; _Alloc = my_allocator<char>]
         assign(_InputIterator __first, _InputIterator __last)
         ^~~~~~
/usr/include/c++/6/bits/basic_string.h:3719:9: note:   template argument deduction/substitution failed:
/usr/include/c++/6/bits/basic_string.h:3693:51: note:   deduced conflicting types for parameter ‘_InputIterator’ (‘const char*’ and ‘long unsigned int’)
  return this->assign(__s, traits_type::length(__s));
                                                   ^
/usr/include/c++/6/bits/basic_string.h:3729:7: note: candidate: std::basic_string<_CharT, _Traits, _Alloc>& std::basic_string<_CharT, _Traits, _Alloc>::assign(std::initializer_list<_Tp>) [with _CharT = char; _Traits = std::char_traits<char>; _Alloc = my_allocator<char>]
       assign(initializer_list<_CharT> __l)
       ^~~~~~
/usr/include/c++/6/bits/basic_string.h:3729:7: note:   candidate expects 1 argument, 2 provided
